--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,10 +13,9 @@ on:
   workflow_dispatch:
 
 env:
-  GHCR_REPO: shenxn/protonmail-bridge-docker
-  DOCKERHUB_REPO: shenxn/protonmail-bridge
-  DOCKER_REPO_DEV: ghcr.io/shenxn/protonmail-bridge
-  PLATFORMS: linux/amd64,linux/arm64/v8,linux/arm/v7,linux/riscv64
+  GHCR_REPO: ghcr.io/moert09/protonmail-bridge-docker
+  DOCKER_REPO_DEV: ghcr.io/moert09/protonmail-bridge
+  PLATFORMS: linux/amd64 #,linux/arm64/v8,linux/arm/v7,linux/riscv64
 
 jobs:
   test:
@@ -104,7 +103,6 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ env.DOCKERHUB_REPO }}
             ${{ env.GHCR_REPO }}
 
       - name: Login to Docker Hub
@@ -132,12 +130,10 @@ jobs:
         with:
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,"name=name=${{ env.DOCKERHUB_REPO }},${{ env.GHCR_REPO }}",push-by-digest=true,name-canonical=true,push=false
+          outputs: type=image,"name=name=${{ env.GHCR_REPO }}",push-by-digest=true,name-canonical=true,push=false
           context: ./build
           file: ./build/Dockerfile
           tags: |
-            "${{ env.DOCKERHUB_REPO }}:build"
-            "${{ env.DOCKERHUB_REPO }}:${{ env.version }}-build"
             "${{ env.GHCR_REPO }}:build"
             "${{ env.GHCR_REPO }}:${{ env.version }}-build"
           provenance: false
@@ -199,7 +195,6 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ env.DOCKERHUB_REPO }}
             ${{ env.GHCR_REPO }}
           tags: |
             type=raw,enable=true,value=${{ env.version }}-build
@@ -209,14 +204,12 @@ jobs:
         working-directory: ${{ runner.temp }}/digests
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.DOCKERHUB_REPO }}@sha256:%s ' *)
-          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.GHCR_REPO }}@sha256:%s ' *)
 
       - name: Run Trivy vulnerability scan
         uses: aquasecurity/trivy-action@0.30.0
         with:
-          image-ref: "${{ env.DOCKERHUB_REPO }}:${{ env.version }}-build"
+          image-ref: "${{ env.GHCR_REPO }}:${{ env.version }}-build"
           format: 'sarif'
           exit-code: 0
           severity: 'CRITICAL,HIGH'
@@ -228,5 +221,4 @@ jobs:
 
       - name: Inspect image
         run: |
-          docker buildx imagetools inspect ${{ env.DOCKERHUB_REPO }}:${{ steps.meta.outputs.version }}
           docker buildx imagetools inspect ${{ env.GHCR_REPO }}:${{ steps.meta.outputs.version }}
