--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,10 @@ jobs:
 
       - name: Set version
         id: version
-        run: echo "version=`cat VERSION`" >> $GITHUB_ENV
+        run: |
+          set -e
+          version=$(cat VERSION)
+          echo "version=$version" >> $GITHUB_ENV
 
       - name: Docker meta
         id: meta
@@ -64,15 +67,15 @@ jobs:
         uses: aquasecurity/trivy-action@0.30.0
         with:
           image-ref: "${{ env.DOCKER_REPO_DEV }}:dev-${{ github.ref_name }}"
-          format: 'sarif'
+          format: "sarif"
           exit-code: 0
-          severity: 'CRITICAL,HIGH'
-          output: 'trivy-results.sarif'
+          severity: "CRITICAL,HIGH"
+          output: "trivy-results.sarif"
 
       - name: Upload Trivy scan SARIF report
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: "trivy-results.sarif"
 
   build:
     runs-on: ubuntu-latest
@@ -149,12 +152,14 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-
   merge:
     runs-on: ubuntu-latest
     needs:
       - build
     steps:
+      - name: Checkout
+        uses: actions/checkout@master
+
       - name: Download digests
         uses: actions/download-artifact@v4
         with:
@@ -164,7 +169,10 @@ jobs:
 
       - name: Set version
         id: version
-        run: echo "version=`cat VERSION`" >> $GITHUB_ENV
+        run: |
+          set -e
+          version=$(cat VERSION)
+          echo "version=$version" >> $GITHUB_ENV
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -198,14 +206,14 @@ jobs:
         uses: aquasecurity/trivy-action@0.30.0
         with:
           image-ref: "${{ env.GHCR_REPO }}:${{ env.version }}-build"
-          format: 'sarif'
+          format: "sarif"
           exit-code: 0
-          severity: 'CRITICAL,HIGH'
-          output: 'trivy-results.sarif'
+          severity: "CRITICAL,HIGH"
+          output: "trivy-results.sarif"
       - name: Upload Trivy scan SARIF report
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: "trivy-results.sarif"
 
       - name: Inspect image
         run: |
