--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '2.1'
-
 services:
   protonmail-bridge:
-    image: shenxn/protonmail-bridge
+    image: docker pull ghcr.io/moert09/protonmail-bridge-docker:build
     ports:
       - 1025:25/tcp
       - 1143:143/tcp
