--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   protonmail-bridge:
-    image: docker pull ghcr.io/moert09/protonmail-bridge-docker:build
+    image: ghcr.io/moert09/protonmail-bridge-docker:build
     ports:
       - 1025:25/tcp
       - 1143:143/tcp
