--- a/.github/workflows/update-check.yaml
+++ b/.github/workflows/update-check.yaml
@@ -15,11 +15,13 @@ on:
 
 jobs:
   check:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@master
       with:
-        token: ${{ secrets.PERSONAL_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
     - name: Check Update
       run: python3 update-check.py ${{ github.event_name == 'pull_request' }}
